# ChangeLog for dev-ruby/ruby-gtkglext
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkglext/ChangeLog,v 1.9 2004/10/05 17:52:18 usata Exp $

*ruby-gtkglext-0.10.1 (06 Oct 2004)

  06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -ruby-gtkglext-0.10.0.ebuild,
  +ruby-gtkglext-0.10.1.ebuild, ruby-gtkglext-0.9.1.ebuild:
  Stable on x86 and alpha; bug #66274.

*ruby-gtkglext-0.10.0 (09 Aug 2004)

  09 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +ruby-gtkglext-0.10.0.ebuild:
  Version bumped.

  05 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-gtkglext-0.8.0.ebuild,
  ruby-gtkglext-0.8.1.ebuild, ruby-gtkglext-0.9.1.ebuild:
  Added missing dependencies. This closes bug #54682

  30 Jun 2004; Ferris McCormick <fmccor@gentoo.org>
  ruby-gtkglext-0.9.1.ebuild:
  Add ~sparc keyword (part of ruby-gnome2-all)

*ruby-gtkglext-0.9.1 (18 Mar 2004)

  18 Mar 2004; Aron Griffis <agriffis@gentoo.org> ruby-gtkglext-0.8.0.ebuild,
  ruby-gtkglext-0.9.1.ebuild:
  Mark 0.8.0 stable on alpha, ia64 and x86.  Add version 0.9.1 for bug 44739

  13 Mar 2004; David Holm <dholm@gentoo.org> ruby-gtkglext-0.8.1.ebuild:
  Added to ~ppc.

*ruby-gtkglext-0.8.1 (24 Nov 2003)

  24 Nov 2003; Aron Griffis <agriffis@gentoo.org> ruby-gtkglext-0.8.1.ebuild:
  Version bump to 0.8.1

*ruby-gtkglext-0.8.0 (18 Nov 2003)

  18 Nov 2003; Aron Griffis <agriffis@gentoo.org> metadata.xml,
  ruby-gtkglext-0.8.0.ebuild:
  New ebuild based on ruby-gnome2.eclass
