@@ -1,0 +1,1 @@
+MD5 a4fe0c52f971bf01e2382479f4c56470 ruby-gnome2-all-0.11.0.tar.gz 1066284
