@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/ruby-gtkglext
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkglext/ChangeLog,v 1.9 2004/10/05 17:52:18 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtkglext/ChangeLog,v 1.10 2004/11/25 04:28:34 usata Exp $
+
+*ruby-gtkglext-0.10.1 (25 Nov 2004)
+
+  25 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
+  ruby-gtkglext-0.10.1.ebuild, +ruby-gtkglext-0.11.0.ebuild,
+  ruby-gtkglext-0.8.0.ebuild, ruby-gtkglext-0.8.1.ebuild:
+  Version bumped.
 
 *ruby-gtkglext-0.10.1 (06 Oct 2004)
 
